--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -284,14 +284,14 @@
     "    temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
     "    temperature_april['temp2'] = temperature_april['temp2'].astype(str).str[0]\n",
     "\n",
-    "    # \"wydobycie\" z pierwszej kolumny wartości jedności, bądź dziesiątek temperatur\n",
+    "    # extract from the first column the value of one or tens of temperatures\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].str[35:]\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].replace(';','', regex=True)\n",
     "\n",
     "    temperature_april['temp1'] = temperature_april['temp1'].str[35:]\n",
     "    temperature_april['temp1'] = temperature_april['temp1'].replace(';','', regex=True)\n",
     "\n",
-    "    # połączenie częsci dziesiątek/jedności z pierwszej kolumny z częścią dziesiętną z drugiej kolumny\n",
+    "    # combine of the tens/ones from the first column with the decimal from the second column\n",
     "    new_temp1 = temperature_march['temp2'].copy()\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].str.cat(new_temp1, sep='.')\n",
     "    temperature_march= temperature_march.drop(temperature_march.columns[[1]], axis=1)\n",
@@ -321,8 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # dołączanie do głównej ramki danych informacji o temperaturze\n",
-    "df_['temperature'] = pd.to_numeric(df_['temperature']) # zmiana typu danych kolumny z wartościami temp. z str na int"
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append temp information to the main data frame\n",
+    "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of the column with temperature values from str to int"
    ]
   },
   {
@@ -429,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # appending rainfall information to the main data frame"
+    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append rainfall data to the main data frame"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.fillna(0) # NaNy of 00:10, 00:20, 00:30 etc. have been replaced with zeros"
+    "df = df.fillna(0) # NaNs of 00:10, 00:20, 00:30 etc. have been replaced with zeros"
    ]
   },
   {
@@ -525,7 +525,7 @@
     }
    ],
    "source": [
-    "warsaw_bikes_df_.isnull().sum().sort_values(ascending = False).head(30) # # display stations which contain missing values"
+    "warsaw_bikes_df_.isnull().sum().sort_values(ascending = False).head(30) # display stations which contain missing values"
    ]
   },
   {
@@ -2877,16 +2877,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
-    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
    ]
   },
@@ -2913,24 +2903,6 @@
     "            .drop('level_5',1))\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "routes = bike_track.groupby(['station A', 'bike_number', 'station B']).size().reset_index(name='count')"
    ]
   }
  ],
