--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -260,8 +260,10 @@
     "    df_temp_march = df_temp_march.fillna(0) \n",
     "    df_temp_april = df_temp_april.fillna(0)\n",
     "\n",
-    "    temperature_march = df_temp_march.rename(columns={\"249190890;B00300S;2018-03-01 00:00;-19\": \"temp1\", \"10;\": \"temp2\"})\n",
-    "    temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\", \"20;\": \"temp2\"})\n",
+    "    temperature_march = df_temp_march.rename(columns={\"249190890;B00300S;2018-03-01 00:00;-19\": \"temp1\", \n",
+    "                                                      \"10;\": \"temp2\"})\n",
+    "    temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\",\n",
+    "                                                      \"20;\": \"temp2\"})\n",
     "\n",
     "    # split the column into station code and temperature reading\n",
     "    temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
@@ -269,8 +271,11 @@
     "    temperature_df['city_code'] = temperature_march['temp1'].str[0:9]\n",
     "\n",
     "    total_temp = pd.DataFrame(columns = ['city_code', 'date', 'temperature']) \n",
-    "    total_temp['date'] = temperature_df['date'].append(temperature_april['temp1'].str[18:34], ignore_index = True)\n",
-    "    total_temp['city_code'] = temperature_df['city_code'].append(temperature_april['temp1'].str[0:9], ignore_index = True)\n",
+    "    total_temp['date'] = temperature_df['date'].append(temperature_april['temp1'].str[18:34], \n",
+    "                         ignore_index = True)\n",
+    "    \n",
+    "    total_temp['city_code'] = temperature_df['city_code'].append(temperature_april['temp1'].str[0:9],\n",
+    "                              ignore_index = True)\n",
     "\n",
     "    # extract year, month, day, hour and minute from data frame\n",
     "    cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
@@ -291,7 +296,7 @@
     "    temperature_april['temp1'] = temperature_april['temp1'].str[35:]\n",
     "    temperature_april['temp1'] = temperature_april['temp1'].replace(';','', regex=True)\n",
     "\n",
-    "    # combine of the tens/ones from the first column with the decimal from the second column\n",
+    "    # combine the tens/ones from the first column with the decimal from the second column\n",
     "    new_temp1 = temperature_march['temp2'].copy()\n",
     "    temperature_march['temp1'] = temperature_march['temp1'].str.cat(new_temp1, sep='.')\n",
     "    temperature_march= temperature_march.drop(temperature_march.columns[[1]], axis=1)\n",
@@ -321,8 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append temp information to the main data frame\n",
-    "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of the column with temperature values from str to int"
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append temp data to the main data frame\n",
+    "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of the column with temp values from str to int"
    ]
   },
   {
@@ -468,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +573,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +676,8 @@
     }
    ],
    "source": [
-    "# wykres pudełkowy do sprawdzenia punktów odstających w poszczególnych godzinach\n",
-    "outpoints_hour_day = warsaw_bikes_rent.pivot_table(index='weekday', # dla lepszej czytelności wykresu 'weekday' zamiast 'date'\n",
+    "# box-plot to check outliers in individual hours\n",
+    "outpoints_hour_day = warsaw_bikes_rent.pivot_table(index='weekday', \n",
     "                     columns=warsaw_bikes_rent['hour_'], \n",
     "                     values='bikes_rental', \n",
     "                     aggfunc='sum').boxplot(figsize=(14,8)).set(title = \"Checking outliers\", xlabel = \"Hour\", ylabel = \"Number of bike rentals\")"
@@ -680,23 +685,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# checking on which days and hours there were the most bicycle rentals\n",
+    "# checking on which days and hours there were the most bikes rentals\n",
     "warsaw_bikes_rent['_date'] = pd.to_datetime(warsaw_bikes_rent['date'].dt.strftime('%Y-%m-%d %H'))\n",
     "warsaw_bikes_rent['minutes_'] = warsaw_bikes_rent.date.dt.minute"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "hour_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', '_date', 'minutes_', 'weekday']).agg({'bikes_rental':np.sum})\n",
     "#hour_df.sort_values(by=['bikes_rental'], ascending = False).head(40) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>bikes_rental</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th>_date</th>\n",
+       "      <th>minutes_</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1 Sierpnia - DK Włochy</th>\n",
+       "      <th rowspan=\"4\" valign=\"top\">2018-03-04 00:00:00</th>\n",
+       "      <th>10</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-04 01:00:00</th>\n",
+       "      <th>0</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Żwirki i Wigury - Racławicka</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2018-04-01 23:00:00</th>\n",
+       "      <th>10</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1454950 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   bikes_rental\n",
+       "name                         _date               minutes_ weekday              \n",
+       "1 Sierpnia - DK Włochy       2018-03-04 00:00:00 10       Sunday            0.0\n",
+       "                                                 20       Sunday            0.0\n",
+       "                                                 40       Sunday            0.0\n",
+       "                                                 50       Sunday            0.0\n",
+       "                             2018-03-04 01:00:00 0        Sunday            0.0\n",
+       "...                                                                         ...\n",
+       "Żwirki i Wigury - Racławicka 2018-04-01 23:00:00 10       Sunday            0.0\n",
+       "                                                 20       Sunday            0.0\n",
+       "                                                 30       Sunday            0.0\n",
+       "                                                 40       Sunday            0.0\n",
+       "                                                 50       Sunday            0.0\n",
+       "\n",
+       "[1454950 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hour_df"
    ]
   },
   {
@@ -857,7 +996,7 @@
     }
    ],
    "source": [
-    "# ilośc rowerów na stacji 'Belwederska - Gagarina' 2018-02-27 między godziną 1 a 3 w nocy\n",
+    "# number of bikes at the 'Belwederska - Gagarina' station 2018-02-27 between 1 and 3 am\n",
     "warsaw_bikes_df_.iloc[3305:3320, warsaw_bikes_df_.columns == 'Belwederska - Gagarina'] "
    ]
   },
@@ -867,7 +1006,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# usunięcie informacji o ilości rowerów na stacjach z 03-27 2:30, 2:40 i 03-30 7:00\n",
+    "# remove information about the number of bikes at stations from 03-27 2:30, 2:40 and 03-30 7:00\n",
     "warsaw_bikes_rent = warsaw_bikes_rent[warsaw_bikes_rent.date != '2018-03-27 02:30:00'] \n",
     "warsaw_bikes_rent = warsaw_bikes_rent[warsaw_bikes_rent.date != '2018-03-27 02:40:00']\n",
     "warsaw_bikes_rent = warsaw_bikes_rent[warsaw_bikes_rent.date != '2018-03-30 07:00:00']"
@@ -879,7 +1018,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# zsumowanie ilości wypożyczeń rowerów dla stacji w poszczególnych dniach\n",
+    "# summ up the number of bike rentals for stations on individual days\n",
     "bikes_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', 'date_']).agg({'temperature':np.mean, 'rainfall':np.sum, 'bikes_rental':np.sum})"
    ]
   },
@@ -2870,40 +3009,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
-    "            ['bike_numbers'].str.split(',', expand=True)\n",
-    "            .stack()\n",
-    "            .reset_index(name='bike_numbers')\n",
-    "            .drop('level_5',1))\n",
-    "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
   }
  ],
  "metadata": {
