--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -3001,14 +3001,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def renameColumns(df, feature):\n",
+    "    df.columns = ['stationCode', 'measureCode', 'dateTime', feature, 'empty']\n",
+    "    return df.drop(columnsa=['empty'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def removeNotWarsaw(df):\n",
+    "    return df[df.stationCode\n",
+    "            .apply(lambda stationCode: stationCode == 352200375)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def splitDate(df):\n",
+    "    df['month'] = df.apply(\n",
+    "        lambda row: row.dateTime.split('-')[1], axis = 1)\n",
+    "    df['day'] = df.apply(\n",
+    "        lambda row: row.dateTime.split('-')[2][0:2], axis = 1)\n",
+    "    df['hour'] = df.apply(\n",
+    "        lambda row: row.dateTime.split('-')[2][3:5], axis = 1)\n",
+    "    df['minute'] = df.apply(\n",
+    "        lambda row: row.dateTime.split('-')[2][6:8], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addWeekDay(df):\n",
+    "    df['weekDay'] = df.apply(\n",
+    "        lambda row: 1 + ((int(row['day']) + 2) % 7),\n",
+    "    axis = 1)"
+   ]
   }
  ],
  "metadata": {
