--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -3024,15 +3024,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def splitDate(df):\n",
-    "    df['month'] = df.apply(\n",
-    "        lambda row: row.dateTime.split('-')[1], axis = 1)\n",
-    "    df['day'] = df.apply(\n",
-    "        lambda row: row.dateTime.split('-')[2][0:2], axis = 1)\n",
-    "    df['hour'] = df.apply(\n",
-    "        lambda row: row.dateTime.split('-')[2][3:5], axis = 1)\n",
-    "    df['minute'] = df.apply(\n",
-    "        lambda row: row.dateTime.split('-')[2][6:8], axis = 1)"
+    "def whichDayPart(hour):\n",
+    "    if hour > 2 and hour <= 4:\n",
+    "        return 1\n",
+    "    elif hour > 4 and hour <= 6:\n",
+    "        return 2\n",
+    "    elif hour > 6 and hour <= 8:\n",
+    "        return 3\n",
+    "    elif hour > 8 and hour <= 10:\n",
+    "        return 4\n",
+    "    elif hour > 10 and hour <= 12:\n",
+    "        return 5\n",
+    "    elif hour > 12 and hour <= 14:\n",
+    "        return 6\n",
+    "    elif hour > 14 and hour <= 16:\n",
+    "        return 7  \n",
+    "    elif hour > 16 and hour <= 18:\n",
+    "        return 8\n",
+    "    elif hour > 18 and hour <= 20:\n",
+    "        return 9\n",
+    "    elif hour > 20 and hour <= 22:\n",
+    "        return 10 \n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
@@ -3041,10 +3055,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def addWeekDay(df):\n",
-    "    df['weekDay'] = df.apply(\n",
-    "        lambda row: 1 + ((int(row['day']) + 2) % 7),\n",
-    "    axis = 1)"
+    "def prepareWeatherDF(file, name):\n",
+    "    dfToCut = pd.read_csv(file, header = None, delimiter = ';')\n",
+    "    df = renameColumns(dfToCut, name)\n",
+    "    df = removeNotWarsaw(df)\n",
+    "    splitDate(df)\n",
+    "    df = df.astype({'month': 'int64'})\n",
+    "    df = df.astype({'day': 'int64'})\n",
+    "    df = df.astype({'hour': 'int64'})\n",
+    "    df['dayPart'] = df.apply(\n",
+    "        lambda row: whichDayPart(row['hour']), axis = 1)\n",
+    "    df[name] = df[name].apply(\n",
+    "        lambda data: float(data.replace(',', '.')) if type(data) != float else data)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[['weekDay', 'dayPart', 'temp', 'rain', 'wind', 'hour', 'prevRent', 'date', 'day']]\n",
+    "y = df['rentBikes']\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size = 0.20, random_state = 0)\n",
+    "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size = 0.25, random_state = 0)"
    ]
   }
  ],
