--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1124,6 +1124,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
+    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "start_time = time.time()\n",
     "bike_track_df = bike_track.pivot_table(index='date',\n",
     "                                     columns=['bike_numbers'], \n",
@@ -1131,6 +1141,20 @@
     "                                     aggfunc=lambda x: ' '.join(x))\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = Counter()\n",
+    "for col in bike_track_df_.columns: # search the collection and listing pairs of stations between which bicycles traveled most oftensearching the collection and listing pairs of stations between which bicycles traveled most often\n",
+    "    routes = list(zip(bike_track_df_[col].shift(1, fill_value=bike_track_df_[col][0]), bike_track_df_[col]))\n",
+    "    routes = [(k, v) for k, v in routes if k != v]\n",
+    "    counter.update(routes)\n",
+    "counter.most_common(15)"
    ]
   },
   {
