--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 108.19883990287781 seconds ---\n"
+     "ename": "NameError",
+     "evalue": "name 'pathlib' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-46dc56e33c2f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmdir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"C:\\\\Users\\\\Przem\\\\Code\\\\Analysis-And-Visualization-For-Bike-Sharing-Systems-In-Warsaw\\\\data\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\\\data'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m# path to the directory where JSON files are stored\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"*.json\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pathlib' is not defined"
      ]
     }
    ],
@@ -53,7 +57,10 @@
     "\n",
     "places = []\n",
     "\n",
-    "for file in Path(\"C:\\\\Users\\\\Przem\\\\Code\\\\Analysis-And-Visualization-For-Bike-Sharing-Systems-In-Warsaw\\\\data\").glob(\"*.json\"):   # ścieżka dostępu do katalogu, gdzie przechowywane są pliki JSON\n",
+    "# path to the directory where JSON files are stored\n",
+    "mdir = \"C:\\\\Users\\\\Przem\\\\Code\\\\Analysis-And-Visualization-For-Bike-Sharing-Systems-In-Warsaw\\\\data\"\n",
+    "\n",
+    "for file in Path(mdir).glob(\"*.json\"): \n",
     "\n",
     "    with open(file) as json_file:\n",
     "        data = json.load(json_file)\n",
@@ -66,6 +73,26 @@
     "df = pd.DataFrame(places)\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -352,84 +379,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>rainfall</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>691</th>\n",
-       "      <td>2018-04-01 19:00:00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>692</th>\n",
-       "      <td>2018-04-01 20:00:00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>693</th>\n",
-       "      <td>2018-04-01 21:00:00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>694</th>\n",
-       "      <td>2018-04-01 22:00:00</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695</th>\n",
-       "      <td>2018-04-01 23:00:00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   date  rainfall\n",
-       "691 2018-04-01 19:00:00       0.0\n",
-       "692 2018-04-01 20:00:00       0.0\n",
-       "693 2018-04-01 21:00:00       0.0\n",
-       "694 2018-04-01 22:00:00       0.1\n",
-       "695 2018-04-01 23:00:00       0.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rainfall_all.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -455,6 +404,15 @@
     "main_df = df.copy()\n",
     "main_df.set_index(['date', 'temperature', 'rainfall', 'name'], inplace=True)\n",
     "main_df.sort_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df"
    ]
   },
   {
@@ -706,140 +664,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>bikes_rental</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>name</th>\n",
-       "      <th>_date</th>\n",
-       "      <th>minutes_</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">1 Sierpnia - DK Włochy</th>\n",
-       "      <th rowspan=\"4\" valign=\"top\">2018-03-04 00:00:00</th>\n",
-       "      <th>10</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-03-04 01:00:00</th>\n",
-       "      <th>0</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Żwirki i Wigury - Racławicka</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2018-04-01 23:00:00</th>\n",
-       "      <th>10</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <th>Sunday</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1454950 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                   bikes_rental\n",
-       "name                         _date               minutes_ weekday              \n",
-       "1 Sierpnia - DK Włochy       2018-03-04 00:00:00 10       Sunday            0.0\n",
-       "                                                 20       Sunday            0.0\n",
-       "                                                 40       Sunday            0.0\n",
-       "                                                 50       Sunday            0.0\n",
-       "                             2018-03-04 01:00:00 0        Sunday            0.0\n",
-       "...                                                                         ...\n",
-       "Żwirki i Wigury - Racławicka 2018-04-01 23:00:00 10       Sunday            0.0\n",
-       "                                                 20       Sunday            0.0\n",
-       "                                                 30       Sunday            0.0\n",
-       "                                                 40       Sunday            0.0\n",
-       "                                                 50       Sunday            0.0\n",
-       "\n",
-       "[1454950 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hour_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -997,7 +821,7 @@
    ],
    "source": [
     "# number of bikes at the 'Belwederska - Gagarina' station 2018-02-27 between 1 and 3 am\n",
-    "warsaw_bikes_df_.iloc[3305:3320, warsaw_bikes_df_.columns == 'Belwederska - Gagarina'] "
+    "# warsaw_bikes_df_.iloc[3305:3320, warsaw_bikes_df_.columns == 'Belwederska - Gagarina'] "
    ]
   },
   {
@@ -1018,7 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# summ up the number of bike rentals for stations on individual days\n",
+    "# sum up the number of bike rentals for stations on individual days\n",
     "bikes_df = warsaw_bikes_rent.set_index('name').groupby([ 'name', 'date_']).agg({'temperature':np.mean, 'rainfall':np.sum, 'bikes_rental':np.sum})"
    ]
   },
@@ -1028,8 +852,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_df['temperature'] = bikes_df['temperature'].round(1) # zaokrąglanie wartości temp. powietrza\n",
-    "bikes_df['rainfall'] = bikes_df['rainfall'].round(1) # zaokrąglanie sumy opadów deszczu\n"
+    "bikes_df['temperature'] = bikes_df['temperature'].round(1) # round the temp values\n",
+    "bikes_df['rainfall'] = bikes_df['rainfall'].round(1) # round the rainfall values\n"
    ]
   },
   {
@@ -1061,8 +885,8 @@
     }
    ],
    "source": [
-    "df_ac.transpose().boxplot(vert=False, figsize=(12,100)).set(title = \"Checking for outliers\")\n",
-    "plt.show()"
+    "# df_ac.transpose().boxplot(vert=False, figsize=(12,100)).set(title = \"Checking for outliers\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -1071,7 +895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# wyznaczenie sumy i średniej wypożyczonych rowerów dla poszczególnych stacji\n",
+    "# determine the sum and average of bikes rented for individual stations\n",
     "alldfc_ = df_ac.copy()\n",
     "alldfc_['total'] = alldfc_.sum(axis = 1)\n",
     "alldfc_['average/day'] = alldfc_.mean(axis = 1)\n",
@@ -1084,7 +908,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# usunięcie z ramki danych stacji, dla których wartości wypożyczonych rowerów są mało wiarygodne\n",
+    "# remove from the data frame stations for which borrowed values are unreliable\n",
     "bikes_df = bikes_df.drop(['Mirków', 'Klarysew', 'Park Zdrojowy', 'Grapa', 'CH Marywilska 44', 'Skolimów'])"
    ]
   },
@@ -1167,34 +991,6 @@
     "bike_track_df_ = bike_track_df_.transpose()\n",
     "bike_track_df_ = bike_track_df_.dropna()\n",
     "bike_track_df_ = bike_track_df_.transpose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "latA = regular_routes_.lat_A.tolist()\n",
-    "lngA = regular_routes_.lng_A.tolist()\n",
-    "latB = regular_routes_.lat_B.tolist()\n",
-    "lngB = regular_routes_.lng_B.tolist()\n",
-    "\n",
-    "gmap = gmplot.GoogleMapPlotter(52.21,21, 13) \n",
-    "\n",
-    "for i in range(len(regular_routes_)):  # trasy rysowane są w petli, aby nie łączyć kolejnych węzłów\n",
-    "    \n",
-    "    x = [ latA[i], latB[i] ]\n",
-    "    y = [ lngA[i], lngB[i] ]\n",
-    "    \n",
-    "    gmap.scatter(x, y,'# FF0000',size = 40, marker = False ) \n",
-    "  \n",
-    "    gmap.plot(x, y,'white', edge_width = 1.5) \n",
-    "\n",
-    "# mapa Warszawy z regularnymi trasami \n",
-    "gmap.draw(\"map.html\")\n",
-    "\"\"\""
    ]
   },
   {
